fix: fixing mobile text cutting off on hero

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oxanium:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Bebas+Neue&family=Oxanium:wght@200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import "tailwindcss";
 @import "@nuxt/ui";
 @import "./icons.css";
@@ -15,7 +15,7 @@
     --ui-text-highlighted: oklch(0.05 0 0);
     --ui-text            : oklch(0.05 0 0);
     
-    --font-bebas: 'Bebas', sans-serif;
+    --font-rubik: 'Rubik', sans-serif;
 }
 
 :root {
@@ -34,8 +34,8 @@
 } 
 
 h1, h2, h3 {
-  font-family: 'Bebas Neue', sans-serif;
-  font-weight: 600;
+  font-family: 'Rubik', sans-serif;
+  font-weight: t00;
 }
 
 h1 {
